--- a/catologo-productos/views/index.ejs
+++ b/catologo-productos/views/index.ejs
@@ -17,7 +17,7 @@
 			<!-- Show the "ultimos" products -->
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/productos/producto">
 						<figure class="product-box_image">
 							<img src="/images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -31,7 +31,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/productos/producto">>
 						<figure class="product-box_image">
 							<img src="/images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -46,7 +46,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/productos/producto">>
 						<figure class="product-box_image">
 							<img src="/images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -61,7 +61,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/productos/producto">>
 						<figure class="product-box_image">
 							<img src="/images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -86,7 +86,7 @@
 			<!-- Show the "ultimos" products -->
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/productos/producto">>
 						<figure class="product-box_image">
 							<img src="/images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -100,7 +100,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/productos/producto">>
 						<figure class="product-box_image">
 							<img src="/images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -114,7 +114,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/productos/producto">>
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -128,7 +128,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/productos/producto">>
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
