--- a/catologo-productos/views/index.ejs
+++ b/catologo-productos/views/index.ejs
@@ -1,9 +1,8 @@
 
 <%- include('./partials/head') %>
 <%- include('./partials/header') %>
-<body>
-	
-	<div class="banner">
+<main>
+<div class="banner">
 		<img src="/images/img-home-banner.jpg" alt="Banner de ofertas">
 	</div>
 	<!-- /Banner -->
@@ -142,5 +141,5 @@
 			</div>
 		</div>
 	</div>
-
+</main>
     <%- include('./partials/footer') %>
