--- a/catologo-productos/views/index.ejs
+++ b/catologo-productos/views/index.ejs
@@ -14,17 +14,19 @@
 				<h2 class="products-title">Novedades</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<div class="col-12 col-sm-6 col-lg-3">
+		<div class="col-12 col-sm-6 col-lg-3">
+			<% for(let i=0; i < productos.lenght; i++){%>
 				<section class="product-box">
 					<a href="/productos/producto">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src=<%=productos[i].imagen%> >
 						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
+					        <article class="product-box_data">
+							<h2> <%= productos[i].nombre %> </h2>
+							<p> <%= productos[i].descripción %>  </p>
+							<p> <%= comentarios[i].textoComentario %>  </p>
 						</article>
+						<%}%>
 					</a>
 				</section>
 			</div>
@@ -83,6 +85,7 @@
 				<h2 class="products-title">Más comentados</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
+
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
 					<a href="/productos/producto">>
