--- a/catologo-productos/views/index.ejs
+++ b/catologo-productos/views/index.ejs
@@ -15,7 +15,7 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 		<div class="col-12 col-sm-6 col-lg-3">
-			<% for(let i=0; i < productos.lenght; i++){%>
+			<% for(let i=0; i < productos.length; i++){%>
 				<section class="product-box">
 					<a href="/productos/producto">
 						<figure class="product-box_image">
@@ -24,7 +24,7 @@
 					        <article class="product-box_data">
 							<h2> <%= productos[i].nombre %> </h2>
 							<p> <%= productos[i].descripción %>  </p>
-							<p> <%= comentarios[i].textoComentario %>  </p>
+							
 						</article>
 						<%}%>
 					</a>
