--- a/catologo-productos/public/stylesheets/app.css
+++ b/catologo-productos/public/stylesheets/app.css
@@ -259,7 +259,7 @@ hr {
 
 /*====== Footer ======*/
 .main-footer {
-  background-color: #ffffff;
+  background-color: #77120e;
   padding: 20px 0;
   margin-top: 80px;
 }
@@ -269,18 +269,18 @@ hr {
 }
 
 .footer-data i {
-  color: var(--light-blue);
+  color: var(white);
   font-size: 3.5em;
 }
 
 .footer-data h2 {
-  color: var(--gray);
+  color: white;
   font-size: 2.4em;
   font-weight: 400;
 }
 
 .footer-data p {
-  color: var(--gray);
+  color: white;
   font-size: 1.5em;
   font-weight: 300;
 }
@@ -294,6 +294,13 @@ hr {
   margin: 0;
   color: var(--gray);
   padding: 15px 0;
+}
+
+#final{
+  text-align: center;
+  font-size: x-large;
+  color:white;
+  font-family: 'Segoe UI';
 }
 
 
