--- a/catologo-productos/views/partials/footer.ejs
+++ b/catologo-productos/views/partials/footer.ejs
@@ -4,28 +4,28 @@
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
                     <i class="fas fa-credit-card"></i>
-                    <h2>Pagá con tarjeta o en efectivo</h2>
-                    <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y
-                        siempre es seguro!</p>
+                    <h2>Paga como quieras</h2>
+                    <p>Aceptamos todos los medios de pago y cuotas sin interés con tarjetas bancarias</p>
                 </article>
             </div>
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
                     <i class="fas fa-gift"></i>
-                    <h2>Envío gratis desde $ 1.999</h2>
-                    <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un
-                        beneficio de Mercado Puntos.</p>
+                    <h2>Envío gratis desde $ 5000</h2>
+                    <p> Válido en todo el país. Consulta por envíos en el día en zona de CABA y alrededores </p>
                 </article>
             </div>
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
                     <i class="fas fa-user-shield"></i>
-                    <h2>Seguridad, de principio a fin</h2>
-                    <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás
-                        siempre protegido.</p>
+                    <h2>Club de fieles Lectores</h2>
+                    <p>Forma parte de nuestro club de lectores y suma descuentos para tus próximas compras</p>
                 </article>
             </div>
         </div>
+    </div>
+    <div id="final"  >
+    <p>Santos Pasman,  Pedro Maldini,   Victoria Portillo</p>
     </div>
 </footer>
 </body>	
