--- a/catologo-productos/public/stylesheets/app.css
+++ b/catologo-productos/public/stylesheets/app.css
@@ -1,5 +1,5 @@
 /*====== Fonts ======*/
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@500;600&family=Lobster&display=swap');
 
 
 /*====== Variables ======*/
@@ -68,7 +68,7 @@ hr {
 /*====== Main Header ======*/
 .main-header {
   padding: 15px 0;
-  background-color: var(--yellow);
+  background-color: rgb(165, 26, 26);
 }
 
 .main-header_home-link,
