--- a/catologo-productos/public/stylesheets/app.css
+++ b/catologo-productos/public/stylesheets/app.css
@@ -29,7 +29,7 @@ body {
 body {
   font-family: var(--base-font-family);
   font-weight: 300;
-  background-color: var(--light-gray);
+  background-color: rgb(168, 122, 100);
 }
 
 ul,
@@ -154,12 +154,14 @@ hr {
 
 /*====== Banner ======*/
 .banner {
-  background-image: url(/images/img-home-banner.jpg);
+  
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   height: 100px;
 }
+ 
+
 
 
 /*====== Products ======*/
