--- a/catologo-productos/views/index.ejs
+++ b/catologo-productos/views/index.ejs
@@ -3,19 +3,23 @@
 <%- include('./partials/header') %>
 <main>
 <div class="banner">
-		<img src="/images/img-home-banner.jpg" alt="Banner de ofertas">
+		<img src="images/libros.jpg" alt="Banner de ofertas">
 	</div>
 	<!-- /Banner -->
 
 	<!-- Novedades -->
 	<div class="container products-wrapper">
+		
 		<div class="row">
+			
 			<div class="col-12">
+				
 				<h2 class="products-title">Novedades</h2>
+				<% for(let i=0; i < productos.length; i++){%>
 			</div>
 			<!-- Show the "ultimos" products -->
 		<div class="col-12 col-sm-6 col-lg-3">
-			<% for(let i=0; i < productos.length; i++){%>
+			
 				<section class="product-box">
 					<a href="/productos/producto">
 						<figure class="product-box_image">
@@ -30,119 +34,41 @@
 					</a>
 				</section>
 			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="../public/images/products/default-image.png">>
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/productos/producto">>
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/productos/producto">>
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
 		</div>
 	</div>
 	<!-- /Novedades -->
 	<!-- Más comentados -->
+	
 	<div class="container products-wrapper">
+		
 		<div class="row">
+			
 			<div class="col-12">
+				
 				<h2 class="products-title">Más comentados</h2>
+				<% for(let i=0; i < productos.length; i++){%>
 			</div>
 			<!-- Show the "ultimos" products -->
-
-			<div class="col-12 col-sm-6 col-lg-3">
+		<div class="col-12 col-sm-6 col-lg-3">
+			
 				<section class="product-box">
-					<a href="/productos/producto">>
+					<a href="/productos/producto">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src=<%=productos[i].imagen%> >
 						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
+					        <article class="product-box_data">
+							<h2> <%= productos[i].nombre %> </h2>
+							<p> <%= productos[i].descripción %>  </p>
+							
 						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/productos/producto">>
-						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/productos/producto">>
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/productos/producto">>
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
+						<%}%>
 					</a>
 				</section>
 			</div>
 		</div>
 	</div>
+
+
+
 </main>
     <%- include('./partials/footer') %>
