--- a/catologo-productos/views/index.ejs
+++ b/catologo-productos/views/index.ejs
@@ -21,7 +21,7 @@
 		<div class="col-12 col-sm-6 col-lg-3">
 			
 				<section class="product-box">
-					<a href="/productos/producto">
+					<a href="/product_detalle.ejs">
 						<figure class="product-box_image">
 							<img src=<%=productos[i].imagen%> >
 						</figure>
@@ -52,7 +52,7 @@
 		<div class="col-12 col-sm-6 col-lg-3">
 			
 				<section class="product-box">
-					<a href="/productos/producto">
+					<a href="/product_detalle.ejs">
 						<figure class="product-box_image">
 							<img src=<%=productos[i].imagen%> >
 						</figure>
