--- a/catologo-productos/public/stylesheets/app.css
+++ b/catologo-productos/public/stylesheets/app.css
@@ -29,7 +29,7 @@ body {
 body {
   font-family: var(--base-font-family);
   font-weight: 300;
-  background-color: rgb(168, 122, 100);
+  background-color: rgb(252, 131, 74);
 }
 
 ul,
@@ -68,7 +68,7 @@ hr {
 /*====== Main Header ======*/
 .main-header {
   padding: 15px 0;
-  background-color: rgb(165, 26, 26);
+  background-color: rgb(226, 65, 44);
 }
 
 .main-header_home-link,
@@ -171,9 +171,10 @@ hr {
 }
 
 .products-title {
-  font-size: 2.4em;
+  font-size: 3.6em;
   font-weight: 400;
-  color: var(--gray);
+  color: rgb(0, 0, 0);
+  font-family: 'Franklin Gothic Medium';
 }
 
 .product-box {
