--- a/catologo-productos/views/index.ejs
+++ b/catologo-productos/views/index.ejs
@@ -21,7 +21,7 @@
 		<div class="col-12 col-sm-6 col-lg-3">
 			
 				<section class="product-box">
-					<a href="/producto/product_detalle">
+					<a href="/producto/detalle">
 						<figure class="product-box_image">
 							<img src=<%=productos[i].imagen%> >
 						</figure>
@@ -30,8 +30,9 @@
 							<p> <%= productos[i].descripción %>  </p>
 							
 						</article>
-						<%}%>
+						
 					</a>
+					<%}%>
 				</section>
 			</div>
 		</div>
