--- a/catologo-productos/views/login.ejs
+++ b/catologo-productos/views/login.ejs
@@ -31,9 +31,10 @@
   <br><br>
                     
                     
-                    <button>
+                    <button><a href="/users/edit-profile">
                         Log in
-                    </button>
+                 </a>
+                </button>
     
                 </form>
                </section>
