--- a/catologo-productos/views/edit-profile.ejs
+++ b/catologo-productos/views/edit-profile.ejs
@@ -1,17 +1,12 @@
-
-
-<!DOCTYPE html>
-<html lang="es">
-
-
 <%- include('./partials/head') %>
+<%- include('./partials/header') %>
 
-<body>
-	<%- include('./partials/header') %>
+<!-- Novedades -->
+<div class="container products-wrapper">
+    <div class="row">
+        <div class="col-12">
+            <h2 class="products-title">Editar mi perfil</h2>
+        </div>
+        
 
-	
-
-	<%- include('./partials/footer') %>
-</body>
-
-</html>
+<%- include('./partials/footer') %>
