--- a/catologo-productos/views/partials/header.ejs
+++ b/catologo-productos/views/partials/header.ejs
@@ -16,8 +16,8 @@
 
             <div class="col-12 col-md-4">
                 <a class="main-header_credit-link">
-                    <i class="fas fa-hand-holding-usd"></i>
-                    Todas las opiniones en un solo lugar.
+                    
+                    El mejor lugar para adquirir tus lecturas
                 </a>
             </div>
         </div>
@@ -49,7 +49,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/users/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
+                    <a href="/users/login">Iniciar sesión <i class="fas fa-sign-in-alt"></i></a>
                 </li>
             </ul>
         </nav>
