--- a/catologo-productos/views/partials/profile.ejs
+++ b/catologo-productos/views/partials/profile.ejs
@@ -30,133 +30,33 @@
 
 <!-- Mis productos -->
 <div class="container products-wrapper">
+		
     <div class="row">
+        
         <div class="col-12">
-            <h2 class="products-title">Mis productos</h2>
+            
+            <h2 class="products-title">Novedades</h2>
+            <% for(let i=0; i < productos.length; i++){%>
         </div>
-        <!-- Show mis productos -->
-        <div class="col-12 col-sm-6 col-lg-3">
+        <!-- Show the "ultimos" products -->
+    <div class="col-12 col-sm-6 col-lg-3">
+        
             <section class="product-box">
-                <a href="product.html">
+                <a href="/producto/product_detalle">
                     <figure class="product-box_image">
-                        <img src="images/products/default-image.png" alt="cafetera moulinex">
+                        <img src=<%=productos[i].imagen%> >
                     </figure>
-                    <article class="product-box_data">
-                        <h2>Nombre del producto</h2>
-                        <p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-                        <p>Comentarios: 12</p>
+                        <article class="product-box_data">
+                        <h2> <%= productos[i].nombre %> </h2>
+                        <p> <%= productos[i].descripción %>  </p>
+                        
                     </article>
-                </a>
-            </section>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-            <section class="product-box">
-                <a href="product.html">
-                    <figure class="product-box_image">
-                        <img src="images/products/default-image.png" alt="cafetera moulinex">
-                    </figure>
-                    <article class="product-box_data">
-                        <h2>Nombre del producto</h2>
-                        <p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-                            delectus ex</p>
-                        <p>Comentarios: 12</p>
-                    </article>
-                </a>
-            </section>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-            <section class="product-box">
-                <a href="product.html">
-                    <figure class="product-box_image">
-                        <img src="images/products/default-image.png" alt="cafetera moulinex">
-                    </figure>
-                    <article class="product-box_data">
-                        <h2>Nombre del producto</h2>
-                        <p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-                            delectus ex</p>
-                        <p>Comentarios: 12</p>
-                    </article>
-                </a>
-            </section>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-            <section class="product-box">
-                <a href="product.html">
-                    <figure class="product-box_image">
-                        <img src="images/products/default-image.png" alt="cafetera moulinex">
-                    </figure>
-                    <article class="product-box_data">
-                        <h2>Nombre del producto</h2>
-                        <p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-                            delectus ex</p>
-                        <p>Comentarios: 12</p>
-                    </article>
-                </a>
-            </section>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-            <section class="product-box">
-                <a href="product.html">
-                    <figure class="product-box_image">
-                        <img src="images/products/default-image.png" alt="cafetera moulinex">
-                    </figure>
-                    <article class="product-box_data">
-                        <h2>Nombre del producto</h2>
-                        <p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-                            delectus ex</p>
-                        <p>Comentarios: 12</p>
-                    </article>
-                </a>
-            </section>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-            <section class="product-box">
-                <a href="product.html">
-                    <figure class="product-box_image">
-                        <img src="images/products/default-image.png" alt="cafetera moulinex">
-                    </figure>
-                    <article class="product-box_data">
-                        <h2>Nombre del producto</h2>
-                        <p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-                            delectus ex</p>
-                        <p>Comentarios: 12</p>
-                    </article>
-                </a>
-            </section>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-            <section class="product-box">
-                <a href="product.html">
-                    <figure class="product-box_image">
-                        <img src="images/products/default-image.png" alt="cafetera moulinex">
-                    </figure>
-                    <article class="product-box_data">
-                        <h2>Nombre del producto</h2>
-                        <p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-                            delectus ex</p>
-                        <p>Comentarios: 12</p>
-                    </article>
-                </a>
-            </section>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-            <section class="product-box">
-                <a href="product.html">
-                    <figure class="product-box_image">
-                        <img src="images/products/default-image.png" alt="cafetera moulinex">
-                    </figure>
-                    <article class="product-box_data">
-                        <h2>Nombre del producto</h2>
-                        <p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-                            delectus ex</p>
-                        <p>Comentarios: 12</p>
-                    </article>
+                    <%}%>
                 </a>
             </section>
         </div>
     </div>
 </div>
-<!-- /Mis productos -->
 
 
 <%- include('./partials/footer') %>
