--- a/catologo-productos/views/edit-profile.ejs
+++ b/catologo-productos/views/edit-profile.ejs
@@ -6,6 +6,29 @@
     <div class="row">
         <div class="col-12">
             <h2 class="products-title">Editar mi perfil</h2>
+            <section>
+                <form action="" method="get">
+                    <div>
+                        <input type="text" placeholder="Usuario">
+                    </div>
+                    <div>
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <div>
+                        <input type="date" placeholder="Fecha de nacimieno">
+                    </div>
+                    <div>
+                        <input type="number" placeholder="Dni">
+                    </div>
+                    <div>
+                        <input type="password" placeholder="Password">
+                    </div>
+                    <div>
+                        <input type="text" placeholder="Foto de Perfil">
+                    </div>
+                    <button>
+                        Grabar modificaciones
+                    </button>
         </div>
         
 
