--- a/catologo-productos/views/partials/profile.ejs
+++ b/catologo-productos/views/partials/profile.ejs
@@ -10,7 +10,7 @@
         <div class="data-container col-6">
             <div class="d-flex align-items-center ">
                 <h1 class="main-title">Nombre del usuario 
-                    <a href="profile-edit.html">
+                    <a href="/users/edit-profile">
                         <i class="fas fa-cog"></i>
                     </a>
                 </h1>
