--- a/catologo-productos/views/register.ejs
+++ b/catologo-productos/views/register.ejs
@@ -17,12 +17,12 @@
 				<h2 class="products-title">Registrate desde aquí</h2>
 			
            <section>
-            <form action="" method="post">
+            <form action="" method="get">
                 <div>
                     <input type="text" placeholder="Usuario">
                 </div>
                 <div>
-                    <input type="text" placeholder="Email">
+                    <input type="email" placeholder="Email">
                 </div>
                 <div>
                     <input type="date" placeholder="Fecha de nacimieno">
@@ -32,6 +32,9 @@
                 </div>
                 <div>
                     <input type="password" placeholder="Password">
+                </div>
+                <div>
+                    <input type="text" placeholder="Foto de Perfil">
                 </div>
                 <button>
                     Registrarme
