--- a/catologo-productos/views/index.ejs
+++ b/catologo-productos/views/index.ejs
@@ -1,4 +1,3 @@
-
 <%- include('./partials/head') %>
 <%- include('./partials/header') %>
 <main>
@@ -21,7 +20,7 @@
 		<div class="col-12 col-sm-6 col-lg-3">
 			
 				<section class="product-box">
-					<a href="/producto/detalle">
+					<a href="/productos/detalle">
 						<figure class="product-box_image">
 							<img src=<%=productos[i].imagen%> >
 						</figure>
@@ -53,7 +52,7 @@
 		<div class="col-12 col-sm-6 col-lg-3">
 			
 				<section class="product-box">
-					<a href="">
+					<a href="/productos/detalle">
 						<figure class="product-box_image">
 							<img src=<%=productos[i].imagen%> >
 						</figure>
