agregados de users

--- a/catologo-productos/views/login.ejs
+++ b/catologo-productos/views/login.ejs
@@ -19,7 +19,7 @@
 			</div>
 			
             <section>
-                <form action="" method="get">
+                <form action="/users/login" method="post">
                     <div>
                         <input type="text" placeholder="Email">
                     </div>
