--- a/catologo-productos/views/register.ejs
+++ b/catologo-productos/views/register.ejs
@@ -17,7 +17,7 @@
 				<h2 class="products-title">Registrate desde aquí</h2>
 			
            <section>
-            <form action="" method="get">
+            <form action="/users/register" method="post">
                 <div>
                     <input type="text" placeholder="Usuario">
                 </div>
