--- a/catologo-productos/views/partials/header.ejs
+++ b/catologo-productos/views/partials/header.ejs
@@ -27,7 +27,7 @@
         </button>
 
         <nav class="main-navbar">
-            <%if (usuarioLogueado === true ){%>
+            <%if (locals.user){%>
             <ul class="left-navbar">
                 
                 <li><a href="/">Todos los productos</a></li>
