--- a/catologo-productos/views/product-add.ejs
+++ b/catologo-productos/views/product-add.ejs
@@ -2,7 +2,7 @@
 <%- include('./partials/header') %>
 <main>
     <section>
-        <form action="" method="get">
+        <form action="/producto/add" method="post">
             <div>
                 <input type="file" placeholder="Foto del Producto">
             </div>
